--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ plotly
 pandas
 numpy
 shroomdk
+altair==4.2.0
+numpy==1.23.0
+pandas==1.4.3
+pandas_profiling==3.2.0
+plotly==5.9.0
+requests==2.28.0
