--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ streamlit==1.13.0
 streamlit_ace==0.1.1
 streamlit_pandas_profiling==0.1.3
 streamlit-aggrid
+streamlit_autorefresh
+streamlit-nightly
